--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,8 +1,7 @@
 {
-	"version":"0.1.0",
+	"version":"2.0.0",
 	"command":"tsc",
-	"isShellCommand":true,
-	"showOutput":"always",
+	"reveal":"always",
 	"args":["-sourcemap", "--out", "main.js", "-p", "src"],
 	"problemMatcher": "$tsc"
 }
